# media2ascii

./: .gitignore  README.md  get_frame.py  image-to-txt.py  img.txt  main.py  pyproject.toml  requirements.txt
